--- a/config.cfg
+++ b/config.cfg
@@ -1,20 +1,17 @@
 #The directory where your raw reads are located
-#READ_DIRECTORY="/project/nadc_iav/carl.hutter/Flumina_test/Flumina/test_dataset"
-READ_DIRECTORY="/Users/chutter/Dropbox/Research/0_Github/Flumina/test_dataset"
+READ_DIRECTORY="/Flumina/test_dataset"
 
 #CSV with the file name that matches to both read pairs in the "File column" and sample name in the "Sample" column
-#RENAME_FILE="/project/nadc_iav/carl.hutter/Flumina_test/Flumina/example_file_rename.csv"
-RENAME_FILE="/Users/chutter/Dropbox/Research/0_Github/Flumina/example_file_rename.csv"
+RENAME_FILE="/Flumina/example_file_rename.csv"
 
 #The path to the reference file
-#REFERENCE_FILE="/project/nadc_iav/carl.hutter/Flumina_test/Flumina/ancestral_reference.fa"
-REFERENCE_FILE="/Users/chutter/Dropbox/Research/0_Github/Flumina/reference.fa"
+REFERENCE_FILE="/Flumina/reference.fa"
 
 # curated csv database with the columns "Gene", "Amino_Acid", and "Type" (category of site) of interest
-AA_DB="/Users/chutter/Dropbox/Research/0_Github/Flumina/curated_database.csv"
+AA_DB="/Flumina/curated_database.csv"
 
 # a metadata file with 
-METADATA="/Users/chutter/Dropbox/Research/0_Github/Flumina/example_metadata.csv"
+METADATA="/Flumina/example_metadata.csv"
 
 #Group names from metadata to summarize data by
 GROUP_NAMES="discrete_host"
