--- a/config.cfg
+++ b/config.cfg
@@ -10,10 +10,10 @@ REFERENCE_FILE="/Flumina/reference.fa"
 # curated csv database with the columns "Gene", "Amino_Acid", and "Type" (category of site) of interest
 AA_DB="/Flumina/curated_database.csv"
 
-# a metadata file with 
+# a metadata file with at least one column named "Sample" to join databases
 METADATA="/Flumina/example_metadata.csv"
 
-#Group names from metadata to summarize data by
+#Group column name from metadata to summarize and group data i.e. cow versus birds versus poultry
 GROUP_NAMES="discrete_host"
 
 #Whether to overwrite or not
@@ -22,9 +22,9 @@ OVERWRITE=FALSE
 #If a job is killed mid job, sometimes snakemake will lock directories
 FORCE_UNLOCK=TRUE
 
-#number of threads to use
+#number of threads to use (or jobs to run)
 THREADS=6
 
 #multi-job cluster mode, add in cluster job details. THREADS above becomes number of jobs. Set to FALSE to run without new jobs
-#CLUSTER_JOBS="sbatch -p priority --qos=vpru -A nadc_iav -D /project/nadc_iav/carl.hutter/Flumina_test/Flumina --mem 40G --cpus-per-task=2"
+#CLUSTER_JOBS="sbatch -p priority -D /Flumina_test/Flumina --mem 40G --cpus-per-task=2"
 CLUSTER_JOBS=FALSE
