updated to allow changing output directory

--- a/config.cfg
+++ b/config.cfg
@@ -1,28 +1,31 @@
-#The directory where your raw reads are located
+# The directory where output files will go
+OUTPUT_DIRECTORY="/Full/Path/to/Flumina_analysis"
+
+# The directory where your raw reads are located
 READ_DIRECTORY="/Flumina/test_dataset"
 
-#CSV with the file name that matches to both read pairs in the "File column" and sample name in the "Sample" column
+# CSV with the file name that matches to both read pairs in the "File column" and sample name in the "Sample" column
 RENAME_FILE="/Flumina/example_file_rename.csv"
 
-#The path to the reference file
+# The path to the reference file
 REFERENCE_FILE="/Flumina/reference.fa"
 
-# curated csv database with the columns "Gene", "Amino_Acid", and "Type" (category of site) of interest
+# Curated csv database with the columns "Gene", "Amino_Acid", and "Type" (category of site) of interest
 AA_DB="/Flumina/curated_database.csv"
 
-# a metadata file with at least one column named "Sample" to join databases
+# A metadata file with at least one column named "Sample" to join databases
 METADATA="/Flumina/example_metadata.csv"
 
-#Group column name from metadata to summarize and group data i.e. cow versus birds versus poultry
+# Group column name from metadata to summarize and group data i.e. cow versus birds versus poultry
 GROUP_NAMES="discrete_host"
 
-#Whether to overwrite or not
+# Whether to overwrite or not
 OVERWRITE=FALSE
 
-#If a job is killed mid job, sometimes snakemake will lock directories
+# If a job is killed mid job, sometimes snakemake will lock directories
 FORCE_UNLOCK=TRUE
 
-#number of threads to use (or jobs to run)
+# Number of threads to use, or max jobs for multi-job 
 THREADS=6
 
 #multi-job cluster mode, add in cluster job details. THREADS above becomes number of jobs. Set to FALSE to run without new jobs
