added ability to disable IRMA

--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,9 @@ METADATA="/Flumina/example_metadata.csv"
 # Group column name from metadata to summarize and group data i.e. cow versus birds versus poultry
 GROUP_NAMES="discrete_host"
 
+# FALSE to disable running IRMA
+DISABLE_IRMA=FALSE
+
 # Whether to overwrite or not
 OVERWRITE=FALSE
 
