--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,15 @@ METADATA="/Flumina/example_metadata.csv"
 # Group column name from metadata to summarize and group data i.e. cow versus birds versus poultry
 GROUP_NAMES="discrete_host"
 
+#minimum depth to keep a variant
+MIN_DEPTH=30
+
+#Minimum quality to keep a variant
+MIN_QUALITY=30
+
+#Minimum allele frequency to consider variant
+MIN_ALLELE_FREQUENCY=0.01
+
 # FALSE to disable running IRMA
 DISABLE_IRMA=FALSE
 
